--- a/css/style.css
+++ b/css/style.css
@@ -322,11 +322,52 @@
 }
 
 .logo {
-  width: 150px;
+  width: 170px;
 }
 
 @media (max-width: 768px) {
   .logo {
     width: 140px;
   }
+}
+
+.container-video {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.fixed-video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.fixed-video-background video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#header-carousel {
+  position: relative;
+  z-index: 1;
+  height: 100%;
+}
+
+.carousel-item {
+  height: 100vh;
+}
+
+.carousel-caption {
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
