--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@
 
 .page-header {
   background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-    url(../img/carousel-1.jpg) center center no-repeat;
+    url(../images/office-setting.jpg) center center no-repeat;
   background-size: cover;
 }
 
