--- a/css/style.css
+++ b/css/style.css
@@ -358,3 +358,41 @@
 .fred {
   padding-top: 70px !important;
 }
+
+/*** Features Start ***/
+.features .feature-item {
+  position: relative;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.features .feature-item::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 10px;
+  background: rgba(0, 58, 102, 0.1);
+  z-index: -1;
+  transition: 0.5s;
+}
+
+.features .feature-item .feature-icon {
+  width: 90px;
+  height: 90px;
+  border-radius: 10px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* background: #6c7293; */
+  transition: 0.5s;
+}
+
+.features .feature-item .feature-icon i {
+  transition: 0.5s;
+}
+
+/*** Features End ***/
