updated features with appropriate icons

--- a/css/style.css
+++ b/css/style.css
@@ -226,43 +226,6 @@
   opacity: 1;
 }
 
-/*** Testimonial ***/
-.testimonial-carousel {
-  max-width: 700px;
-  margin: 0 auto;
-}
-
-.testimonial-carousel .owl-dots {
-  margin-top: 35px;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.testimonial-carousel .owl-dots .owl-dot {
-  width: 60px;
-  height: 60px;
-  margin: 0 5px;
-  padding: 10px;
-  background: var(--secondary);
-  transition: 0.5s;
-}
-
-.testimonial-carousel .owl-dots .owl-dot.active {
-  width: 100px;
-  height: 100px;
-}
-
-.testimonial-carousel .owl-dots .owl-dot img {
-  opacity: 0.1;
-  transition: 0.5s;
-}
-
-.testimonial-carousel .owl-dots .owl-dot.active img {
-  opacity: 1;
-}
-
 /*** Footer ***/
 .footer .btn.btn-link {
   display: block;
@@ -394,5 +357,10 @@
 .features .feature-item .feature-icon i {
   transition: 0.5s;
 }
-
 /*** Features End ***/
+
+/* .about-header {
+  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(9, 7, 7, 0.85)),
+    url(../images/creatives-meeting.jpeg) center center no-repeat;
+  background-size: cover;
+} */
